wordpress/mtd-deployment/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image: bitnami/wordpress:5.7.2
        name: wordpress
        ports:
        - containerPort: 8080
          name: wordpress
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: 8080
          # https://loft.sh/blog/kubernetes-readiness-probes-examples-common-pitfalls/#probes-
          initialDelaySeconds: 5
          periodSeconds: 3
          timeoutSeconds: 2
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
